Compile success and tests run.
Signed-off-by: Attila Gróf <grof.attila9@gmail.com>